# seedBox

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-docs  README.md  RELEASING.md  SECURITY.md  platformio.ini
.github/workflows/: ci.yml  juce-desktop.yml
assets/: juce_motd.txt
containers/native-dev/: Dockerfile  README.md  compose.yaml
docs/: ADD_A_GENERATOR.md  ARCHITECTURE.md  BenchReceiptTemplate.md  BenchValidationMatrix.md  ChooseYourPath.md  CurrentState.md  DIAGNOSTICS.md  DOC_SINGLE_SOURCE.md  JUCESmokeChecklist.md  LEARN_MODE.md  PRESETS.md  PROJECT_MAP.md  RANDOMNESS_PANEL.md  README.md  SAFETY.md  SeedGallery.md  StabilityAndSupport.md  TEACHING_CARDS.md  WhySeedBox.md  assumptions.md  build_mac.md  builder_bootstrap.md  calibration_guide.md  ci_desktop_builds.md  ethics.md  hal.md  hardware_bill_of_materials.md  index.md  interop_mn42.md  juce-parameter-choices.md  juce_build.md  panel_cheat_sheet.md  repo_health_seedbox_2026_03.md  static-analysis.md  toolchain.md  troubleshooting_log.md  ui_ascii_gallery.md  wiring_gallery.md
docs/architecture/: app_services.md  app_services.mmd  app_services_map.json  juce_rt_audit.md
docs/fixtures/: external_input_scenarios.json  external_input_scenarios.md
docs/onboarding/: newcomer_map.md
docs/preset_primes/: README.md  workshop_bank.json
docs/receipts/: 2026-04-seedbox-proof-pass.md  2026-05-b4-native-input-pass.md
docs/roadmaps/: euclid_burst.md  granular.md  granular_reseed_scratch.md  native_golden.md  operator_ui.md  platform_improvement_program.md  resonator.md  seed_system.md  storage.md  swarm_scalability.md
docs/security/: artifact_signing.md
docs/seeds/: README.md  prime_modes.md
docs/tutorials/: euclid_burst_pattern_lab.md  hal_poke_lab.md  live_input_prime_mode.md  scale_quantizer_flow.md
examples/: .gitignore
examples/01_sprout/: NOTES.md  README.md  main.cpp
examples/02_reseed/: README.md  main.cpp
examples/03_headless/: README.md  main.cpp  platformio.ini
examples/04_scale_quantizer/: README.md  platformio.ini
examples/05_live_granular/: README.md
examples/shared/: offline_renderer.cpp  offline_renderer.hpp  reseed_playbook.hpp
include/: BuildInfo.h  HardwareConfig.h  README.md  Seed.h  SeedBoxConfig.h  SeedLock.h  SeedboxConfig.h  SeedboxTeensyCompat.h
include/app/: Clock.h  Preset.h  UiState.h
include/engine/: Engine.h
include/hal/: ArduinoGlue.h  Board.h  UsbMidiGlue.h
include/io/: Store.h
include/ui/: AsciiOledView.h  OledView.h  TextFrame.h
include/util/: Annotations.h  ScaleQuantizer.h  ScaleQuantizerFlow.h
presets/teaching/: 01_clock_subdivision.json  02_euclidean_rhythm.json  03_probability_gates.json  04_lfsr_determinism.json  05_phase_drift_polyrhythm.json  06_motif_mutation.json  07_density_dynamics.json  08_constraint_improv.json  README.md
scripts/: README.md  add_desktop_flag.py  check_musical_effect_contract.py  compute_golden_hashes.py  describe_seedbox_config.py  doc_spellcheck_targets.py  ensure_teensy_macros.py  gen_version.py  generate_app_service_map.py  generate_golden_fixture_browser.py  generate_native_golden_header.py  install_vst3_user.sh  offline_native_golden.sh  run_local_input_golden.py  serve_golden_fixture_browser.py  smoke_native_input_probe.py  starter_bundle.sh  validate_input_scenarios.py
scripts/kicad/: README.md  seedbox_stack.py  sgtl5000_frontend.py  teensy41_core.py
scripts/native/: README.md  micro_offset_probe.py  quantizer_ws_display.py  tap_tempo.py
src/: AudioMemoryBudget.h  HardwarePrelude.h  README.md  main.cpp
src/app/: AppState.cpp  AppState.h  AppUiClockService.cpp  AppUiClockService.h  AudioRuntimeState.cpp  AudioRuntimeState.h  Clock.cpp  ClockTransportController.cpp  ClockTransportController.h  DisplaySnapshot.h  DisplaySnapshotBuilder.cpp  DisplaySnapshotBuilder.h  DisplayTelemetryService.cpp  DisplayTelemetryService.h  GateQuantizeService.cpp  GateQuantizeService.h  HostAudioRealtimeService.cpp  HostAudioRealtimeService.h  HostControlService.cpp  HostControlService.h  InputEvents.cpp  InputEvents.h  InputGateMonitor.cpp  InputGateMonitor.h  InputGestureRouter.cpp  InputGestureRouter.h  Mn42ControlRouter.cpp  Mn42ControlRouter.h  ModeEventRouter.cpp  ModeEventRouter.h  Preset.cpp  PresetController.cpp  PresetController.h  PresetStorageService.cpp  PresetStorageService.h  PresetTransitionRunner.cpp  PresetTransitionRunner.h  README.md  SeedLock.cpp  SeedLockService.cpp  (+12 more)
src/engine/: BurstEngine.cpp  BurstEngine.h  EngineRouter.cpp  EngineRouter.h  EuclidEngine.cpp  EuclidEngine.h  Granular.cpp  Granular.h  Patterns.cpp  Patterns.h  README.md  Resonator.cpp  Resonator.h  Sampler.cpp  Sampler.h  Stereo.h  ToyGenerator.cpp  ToyGenerator.h
src/hal/: board_native.cpp  board_teensy.cpp  hal_audio.cpp  hal_audio.h  hal_io.cpp  hal_io.h  hal_midi_serial7.cpp  hal_midi_serial7.h
src/interop/: mn42_map.h  mn42_param_map.h
src/io/: MidiRouter.cpp  MidiRouter.h  README.md  Storage.cpp  Storage.h  Store.cpp
src/juce/: AppStateThreadViews.h  HostControlBridge.cpp  HostControlBridge.h  JuceHost.cpp  JuceHost.h  JuceHostTest.cpp  README.md  SeedboxApplication.cpp  SeedboxApplication.h  SeedboxAudioProcessor.cpp  SeedboxAudioProcessor.h  SeedboxAudioProcessorEditor.cpp  SeedboxAudioProcessorEditor.h
src/profiles/: MN42.h
src/ui/: AsciiOledView.cpp  OledView.cpp  README.md  TextFrame.cpp
src/util/: RNG.h  ScaleQuantizer.cpp  ScaleQuantizerFlow.cpp  Smoother.h  Units.h
test/: README.md  native_golden
test/examples/: test_offline_exports.cpp
test/native_golden/: test_main.cpp
test/test_app/: README.md  test_audio_defaults.cpp  test_external_midi_priority.cpp  test_granular_source_toggle.cpp  test_main.cpp  test_mn42_control.cpp  test_mn42_modes.cpp  test_presets.cpp  test_seed_engine_selection.cpp  test_seed_prime_modes.cpp  test_ui_frames.cpp
test/test_engine/: test_granular_voice_budget.cpp  (+3 more)
tests/: README.md  test_compute_golden_hashes.py
tools/: juce_vst3_probe.cpp  native_golden_offline.cpp  native_input_probe.cpp
(+69 files in other folders)
